@@ -1,4 +1,7 @@
+-- Rename tables
 RENAME TABLE `ext_timetracking_tracking`  TO `ext_timetracking_active` ;
 RENAME TABLE `ext_comment_feedback` TO `ext_comment_mm_comment_feedback` ;
 RENAME TABLE `system_errorlog` TO `system_log_error` ;
+
+-- Remove tables
 DROP TABLE `system_log` ;
